# Soda

./: .gitignore  CMakeLists.txt  CMakePresets.json
SodaApp/include/Soda/: App.h
SodaApp/src/: App.cpp
SodaBin/CubeRenderer/: main.cpp
SodaBin/TriangleRenderer/: main.cpp
SodaLib/: CMakeLists.txt
SodaLib/include/Soda/: Buffer.h  Face.h  Framebuffer.h  IO.h  Mat.h  Mesh.h  Rasterizer.h  Transform.h  Triangle.h  Vec.h  Vertex.h
SodaLib/src/Soda/: Camera.h  Framebuffer.cpp  IO.cpp  Mat.cpp  Rasterizer.cpp
SodaTinyBin/LineRenderer/: main.cpp
SodaTinyBin/TriangleRenderer/: main.cpp
SodaTinyLib/: CMakeLists.txt
SodaTinyLib/include/: Soda.h
SodaTinyLib/include/Soda/: Color.h  IO.h  Rasterizer.h  Vec.h  Vertex.h
SodaTinyLib/src/Soda/: FrameBuffer.cpp  Rasterizer.cpp  Vec.cpp
SodaWindow/: CMakeLists.txt
SodaWindow/src/: Window.cpp
soda-tiny/: CMakeLists.txt
soda-tiny/src/: Color.h
